Bug 4534 - "acpi_ec_leave_burst_mo: ------->status fail" or " acpi_ec_space_handler: bit_width should be 8"
Summary: "acpi_ec_leave_burst_mo: ------->status fail" or " acpi_ec_space_handler: bi...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Other (show other bugs)
Hardware: i386 Linux
: P2 high
Assignee: Luming Yu
URL:
Keywords:
Depends on:
Blocks: 4535
  Show dependency tree
 
Reported: 2005-04-24 12:55 UTC by Oleksij Rempel (fishor)
Modified: 2005-07-27 18:33 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.13-rc1
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
dmesg kernel 2.6.12-rc5-mm1 (14.92 KB, text/plain)
2005-05-29 23:02 UTC, Oleksij Rempel (fishor)
Details
dmesg kernel 2.6.13-rc1-mm1 (13.81 KB, text/plain)
2005-07-01 16:31 UTC, Oleksij Rempel (fishor)
Details
delete unnecessary console messages (1.74 KB, patch)
2005-07-22 21:08 UTC, Len Brown
Details | Diff

Description Oleksij Rempel (fishor) 2005-04-24 12:55:31 UTC
Distribution:Debian Sarge  
Hardware Environment:samsung nv5000  
Hang on wake after sleep (echo 3 > /proc/acpi/sleep), 
with kernel 2.6.11.7 it's working OK.
Comment 1 Shaohua 2005-04-26 01:22:59 UTC
These seems aren't acpi sleep related patches merged in 2.6.12-rc3. 2.6.12-rc2-
mm3 is known broken.
Did 2.6.12-rc2 work? If it works, possibly it's up to you to narrow down the 
changeset between 2.6.12-rc2 and -rc3.
Comment 2 Oleksij Rempel (fishor) 2005-04-26 06:36:05 UTC
Yes, you have rein. I tested  same configuration on rc full source - it's 
worked OK. Before i tested with linux-2.6.11+2.6.12-rc2. I patched with "bzip2 
-cd 2.6.12-rc2 | patch -p1" 
What is wrong? 
 
Comment 3 Shaohua 2005-04-26 18:54:49 UTC
Len should know the full changeset between rc2 and rc3.
Comment 4 Oleksij Rempel (fishor) 2005-05-01 01:03:48 UTC
Kernel 2.6.12-rc3-mm2 hang on wake 
kernel 2.6.11.8 - OK 
 
 
Comment 5 Oleksij Rempel (fishor) 2005-05-06 00:29:05 UTC
if it's help you: 
2.6.12-rc3-mm3 tested, can't wake! 
i compiled kernels 2.6.12-rc3 and 2.6.12-rc3-mm3 with some debug. 
sleep with 2.6.12-rc3 
  
[4295482.953000] PM: Preparing system for suspend 
[4295482.954000] Stopping tasks: 
========================================================================| 
[4295485.580000] PM: Entering state. 
[4295485.580000]  hwsleep-0306 [231] acpi_enter_sleep_state: Entering sleep 
state [S3] 
[4295485.580000] Back to C! 
[4295493.580000] [ACPI Debug] Buffer: [0x06][ACPI Debug] Buffer: [0x06][ACPI 
Debug] Buffer: [0x06][ACPI Debug] Buffer: [0x06]<7>PM: Finishing up. 
[4295493.771000] ACPI: PCI Interrupt 0000:00:07.2[D] -> Link [LNKD] -> GSI 10 
(level, low) -> IRQ 10 
[4295493.812000] ACPI: PCI Interrupt 0000:00:0c.0[A] -> Link [LNKC] -> GSI 10 
(level, low) -> IRQ 10 
[4295494.767000] e100: eth0: e100_watchdog: link up, 100Mbps, full-duplex 
[4295494.786000] ACPI: PCI Interrupt 0000:00:0d.1[A] -> Link [LNKA] -> GSI 11 
(level, low) -> IRQ 11 
[4295495.718000] hdc: Disabling (U)DMA for SAMSUNG CD-ROM SN-124 (blacklisted) 
[4295495.755000] hub 1-2:1.0: hub_port_status failed (err = -113) 
[4295495.755000] hub 1-2:1.0: hub_port_status failed (err = -113) 
[4295495.755000] hub 1-2:1.0: hub_port_status failed (err = -113) 
[4295495.755000] hub 1-2:1.0: hub_port_status failed (err = -113) 
[4295495.755000] hub 1-2:1.0: activate --> -113 
[4295495.755000] hub 1-2:1.0: cannot disable port 1 (err = -113) 
[4295495.755000] hub 1-2:1.0: cannot disable port 3 (err = -113) 
[4295496.087000] Restarting tasks... done 
[4295496.103000] usb 1-2: USB disconnect, address 2 
[4295496.103000] usb 1-2.1: USB disconnect, address 3 
[4295496.242000] usb 1-2.3: USB disconnect, address 4 
[4295496.419000] usb 1-2: new full speed USB device using uhci_hcd and address 
5 
[4295496.507000] hub 1-2:1.0: USB hub found 
[4295496.509000] hub 1-2:1.0: 4 ports detected 
[4295496.757000] usb 1-2.1: new low speed USB device using uhci_hcd and 
address6 
[4295496.871000] input: USB HID v1.10 Mouse [Logitech USB-PS/2 Optical Mouse] 
on usb-0000:00:07.2-2.1 
[4295497.015000] usb 1-2.3: new full speed USB device using uhci_hcd and 
address 7 
[4295498.390000] ACPI: acpi_ec_space_handler: bit_width should be 8 
[4295498.401000] ACPI: acpi_ec_space_handler: bit_width should be 8 
[4295498.412000] ACPI: acpi_ec_space_handler: bit_width should be 8 
[4295498.423000] ACPI: acpi_ec_space_handler: bit_width should be 8 
Comment 6 Oleksij Rempel (fishor) 2005-05-06 00:34:09 UTC
with kernel 2.6.12-rc3-mm3 it's looks like this  
  
[4294906.954000] Stopping tasks:   
========================================================================|   
[4294906.739000] acpi_bus-0212 [07] acpi-bus-set-power: Dewice is not power 
mangaeble  
[4294906.750000] acpi_bus-0212 [07] acpi-bus-set-power: Dewice is not power 
mangaeble  
[4294906.580000] PM: Entering state.   
[4294906.580000]  hwsleep-0306 [231] acpi_enter_sleep_state: Entering sleep   
state [S3]   
[4294906.580000] Back to C!    
  
nothing more, jast hang.  
Comment 7 Oleksij Rempel (fishor) 2005-05-06 01:24:28 UTC
may be it is a part of this bug 
my dmesg now looks like this: 
217 [90] acpi_ec_leave_burst_mo: ------->status fail 
[4297873.768000]  acpi_ec-0217 [90] acpi_ec_leave_burst_mo: ------->status fail 
[4297873.768000]  acpi_ec-0217 [90] acpi_ec_leave_burst_mo: ------->status fail 
[4297873.781000]  acpi_ec-0217 [94] acpi_ec_leave_burst_mo: ------->status fail 
[4297873.782000]  acpi_ec-0217 [94] acpi_ec_leave_burst_mo: ------->status fail 
[4297877.094000] cpufreq: change failed with new_state 1 and result 3 
[4297878.149000] cpufreq: change failed with new_state 1 and result 3 
[4297878.172000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.173000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.201000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.202000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.228000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.228000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.254000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297878.255000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.771000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.771000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.783000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.783000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.795000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.795000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.807000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.807000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.820000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.820000]  acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.833000]  acpi_ec-0217 [95] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.834000]  acpi_ec-0217 [95] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.894000]  acpi_ec-0217 [92] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.895000]  acpi_ec-0217 [92] acpi_ec_leave_burst_mo: ------->status fail 
[4297954.922000]  acpi_ec-0217 [92] acpi_ec_leave_burst_mo: ------->status fail 
 
Comment 8 Shaohua 2005-05-08 00:32:54 UTC
Hi, could you please check if it's the same issue with bug 4416. See if 
comment 2 in bug 4416 help you.

>acpi_ec-0217 [90] acpi_ec_leave_burst_mo: ------->status fail 
Don't know if this is related with the bug. But it's quite strange, maybe 
Luming knows it.
Comment 9 Oleksij Rempel (fishor) 2005-05-08 01:12:28 UTC
I think not. I use hwsleep and no apic  ... and, in think this bug depend on    
> [4294669.804000] ACPI: acpi_ec_space_handler: bit_width should be 8   
It's looks like Luming or some body other trying to fix it. With patch agenst 
this bug working batt.info correktly (Bug 4535), but hang on wake after hwsleep 
(i mean not resuming from disk). 
Comment 10 Oleksij Rempel (fishor) 2005-05-08 01:13:57 UTC
In kernel 2.6.12-rc4. is no patch agenst   
> ACPI: acpi_ec_space_handler: bit_width should be 8  
Comment 11 Oleksij Rempel (fishor) 2005-05-13 02:30:24 UTC
kernel 2.6.12-rc4-mm1 same result. Hang up.
I tryd to make kernel with sleep and power button only. Nothing positiw.
Comment 12 Oleksij Rempel (fishor) 2005-05-16 11:31:42 UTC
kernel 2.6.12-rc4-mm2 tested. Result negative!
Comment 13 Oleksij Rempel (fishor) 2005-05-29 12:36:36 UTC
Kernel 2.6.12-rc5-mm1 is testet. And you know what ?   
It's working!!!!!!!! :-)))  
 But i thin some thing happened with irq .... because every thing frees like i have throttling enabled 
but it isn't 
Comment 14 Oleksij Rempel (fishor) 2005-05-29 12:58:12 UTC
I tested it one more time. It's because cpudynd but it newer happened before. But i'm anyway happy 
because it working. 
Thank you wary match! 
 
Comment 15 Shaohua 2005-05-29 17:50:40 UTC
>acpi_ec-0217 [92] acpi_ec_leave_burst_mo: ------->status fail 
Can you see above message at 2.6.12-rc5-mm1?
Comment 16 Oleksij Rempel (fishor) 2005-05-29 22:56:23 UTC
Yes. It's happening if I switch from DC to Battery, if laptop working with battery only ore if battery   
are char charging.  
 
   
Comment 17 Oleksij Rempel (fishor) 2005-05-29 23:02:11 UTC
Created attachment 5098 [details]
dmesg kernel 2.6.12-rc5-mm1
Comment 18 Shaohua 2005-05-30 18:27:53 UTC
So the S3 works but ec error still occurs, right? I changed the title.
Comment 19 Oleksij Rempel (fishor) 2005-06-01 10:18:26 UTC
Ooops! There is no more patch against "acpi_ec_space_handler: bit_width should be 8 " in 
2.6.12-rc5-mm2 :-(( . And batt.info is  wrong again! 
Comment 20 Oleksij Rempel (fishor) 2005-06-11 01:34:23 UTC
Difference between kernel 2.6.12-rc5-mm1 and 2.6.12-rc6-mm1:   
2.6.12-rc5-mm1 "acpi_ec-0217 [91] acpi_ec_leave_burst_mo: ------->status fail" come only wheil  
interaction with battares. like "cat /proc/acpi/battery/BAT0/info"  
 and 
2.6.12-rc6-mm1 "acpi_ec_space_handler: bit_width should be 8"  come all time. on boot and etc. 
Comment 21 Oleksij Rempel (fishor) 2005-06-11 01:40:58 UTC
today i found: if there is no demons  looking in to bat.info kernel 2.6.12-rc5-mm1 have no errors. 
 
Comment 22 Oleksij Rempel (fishor) 2005-07-01 16:31:49 UTC
Created attachment 5249 [details]
dmesg kernel 2.6.13-rc1-mm1
Comment 23 Oleksij Rempel (fishor) 2005-07-01 16:33:07 UTC
kernel 2.6.13-rc1-mm1 tested. Result positive, ewry thing working properly! 
Thank you! 
Comment 24 Sebastian K 2005-07-13 13:12:35 UTC
First time here, I'm seeing the following message in 2.6.*-rc*:

Just after booting it starts complaining:

 acpi_ec-0217 [30] acpi_ec_leave_burst_mo: ------->status fail
 acpi_ec-0217 [30] acpi_ec_leave_burst_mo: ------->status fail

2.6.13-rc{1,2} were ok, but 2.6.13-rc3 breaks
Comment 25 Oleksij Rempel (fishor) 2005-07-16 02:20:26 UTC
with kernels 2.6.13 & 13-mm1 ewery thing working properly. 
Comment 26 Len Brown 2005-07-22 11:36:29 UTC
This bug should not be CLOSED until the fix is in Linus' mainline tree.

If a fix exists somewhere, in a bug report, or in the mm tree,
then the bug should be marked RESOLOVED, but should not be closed.

thanks,
-Len
Comment 27 Adrian Bunk 2005-07-22 11:43:31 UTC
Sorry, I've misread comment 25.
Comment 28 Len Brown 2005-07-22 21:08:12 UTC
Created attachment 5364 [details]
delete unnecessary console messages

Let me know if the patch attached doesn't resolve this report.
Comment 29 Len Brown 2005-07-27 18:33:29 UTC
shipped in Linus' tree after 2.6.13-rc3

Note You need to log in before you can comment on or make changes to this bug.